# cpp_stm32

./: .clang-format  .cmake_format  .gitignore  .travis-install-arm-gcc  .travis.yml  ARMToolchain.cmake  CMakeLists.txt  README.md  cortex-m4.ld  stm32f446xe.ld
board/: stm32f446re.in  stm32l432kc.in  supported_board.in
cmake/: board_settings.cmake  build_binary.cmake  compiler_warning.cmake  doxygen.cmake  project_config.hxx.in  project_settings.cmake  sanitizer.cmake  static_analyzer.cmake  unit_test.cmake
example/: CMakeLists.txt  build_binary.cmake
example/blink/: CMakeLists.txt  README.md  blink.cpp  ll_driver.cpp
example/exti/: CMakeLists.txt  README.md  blue_button.cpp  sys_info.hpp
example/gpio_output/: CMakeLists.txt  README.md  digitalout.cpp  ll_driver.cpp
example/i2c/: CMakeLists.txt  i2c_driver_imu.cpp  i2c_imu.cpp  lsm9ds0.hpp  sys_info.hpp
example/spi/: CMakeLists.txt  README.md  lsm9ds0.hpp  spi_driver_imu.cpp  spi_imu.cpp  sys_info.hpp
example/usart/: CMakeLists.txt  README.md  rx_dma.cpp  rx_dma_var_len.cpp  sys_info.hpp  virtual_comm_port.cpp
example/usart/test_script/: rx_dma_var_len.pde
example/usart/with_dma/: README.md  sys_info.hpp  usart_rx_dma.cpp  usart_rx_dma_variable_length.cpp  usart_rx_dma_variable_length.hpp
include/: cortex_m_vector.cpp  cortex_m_vector.hpp  gpio.hpp  memory_map.hpp  nvic.hpp  sys_info.hpp  utility.hpp
include/cpp_stm32/: README.md  project_config.hxx
include/cpp_stm32/common/: dma.hxx  flash.hxx  gpio.hxx  gpio_common.hxx  pin_data.hxx  rcc.hxx  rtc.hxx  usart.hxx  usart_common.hxx
include/cpp_stm32/detail/: algorithm.hxx  builder.hxx  char_literal_idx.hxx  index_interval.hxx  index_range.hxx  lookup_table.hxx  tuple.hxx
include/cpp_stm32/driver/: digital_irq.hxx  digitalout.hxx  gpio_base.hxx  i2c.hxx  real_time_clock.hxx  spi.hxx  sys_clk.hxx  usart.hxx  usart_serial.hxx
include/cpp_stm32/hal/: bit.hxx  callback.hxx  interrupt.hxx  mmio.hxx  register.hxx
include/cpp_stm32/processor/: architecture.hxx  cortex-m-generic.ld
include/cpp_stm32/processor/cortex_m4/: core_util.hxx  nvic.hxx  scb.hxx  vector_table.hxx
include/cpp_stm32/processor/cortex_m4/define/: scb.hxx
include/cpp_stm32/processor/cortex_m4/memory/: bit_banding.hxx  internal_periph.hxx  nvic.hxx  nvic_reg.hxx
include/cpp_stm32/processor/cortex_m4/register/: nvic.hxx  scb.hxx
include/cpp_stm32/processor/cortex_m4/source/: vector_table.cxx
include/cpp_stm32/redirect/: sys_call.hxx
include/cpp_stm32/redirect/src/code_coverage/: sys_call.cxx
include/cpp_stm32/tool/code_generator/: formatter.py  svd_to_code.py
include/cpp_stm32/tool/code_generator/result/: adc_reg.hxx  can_reg.hxx  cec_reg.hxx  dac_reg.hxx  exti_reg.hxx  flash_reg.hxx  gpio_reg.hxx  i2c_reg.hxx  iwdg_reg.hxx  rcc_reg.hxx  rtc_reg.hxx  sdio_reg.hxx  syscfg_reg.hxx  tim_reg.hxx  usart_reg.hxx  usb_otg_fs_reg.hxx  usb_otg_hs_reg.hxx
include/cpp_stm32/utility/: bit.hxx  callback.hxx  constexpr_algo.hxx  enum_op.hxx  integral_constant.hxx  interrupt.hxx  literal_op.hxx  macro.hxx  mmio.hxx  register.hxx  serial.hxx  strongly_typed.hxx  unit.hxx  utility.hxx
include/cpp_stm32/utility/unit/: frequency.hxx  second.hxx  unit.hxx
include/driver/: digitalout.hpp  gpio_base.hpp  serial.hxx  usart.hxx  utility.hpp
include/hal/: cortex_m_vector.cpp  cortex_m_vector.hpp  gpio.hpp  gpio.hxx  interrupt.cxx  interrupt.hxx  memory_map.hpp  memory_map.hxx  nvic.hpp  rcc.hpp  sys_info.hxx  sys_init.hxx  utility.hpp  utility.hxx
include/hal/bit/: bit.hxx
include/hal/peripheral/: flash.hxx  gpio.hxx  nvic.hxx  pwr.hxx  rcc.hxx  usart.hxx
include/hal/peripheral/memory/: flash_reg.hxx  gpio_reg.hxx  nvic_reg.hxx  pwr_reg.hxx  rcc_reg.hxx  usart_reg.hxx  utility.hxx
include/hal/register/: bit.hxx  memory_map.hpp  rcc_reg.hpp  register.hpp  register.hxx  utility.hpp
include/utility/: constexpr_algo.hxx  strongly_typed.hxx  utility.hxx
src/: CMakeLists.txt  main.cpp  sys_info.hpp  sys_info.yaml
test/: CMakeLists.txt  README.md  test.cpp  test_setup.hxx
test/stm32/f4/: CMakeLists.txt  test_main.cpp
test/stm32/f4/compile_time/: CMakeLists.txt  division_factor.cpp
tool/: README.md
tool/clock_generator/: README.md  clock_generator.py
tool/clock_generator/chip/: stm32f446re.yaml  stm32l432kc.yaml
tool/code_generator/: formatter.py  run_code_gen.py
tool/code_generator/result/: can.hxx  crc_reg.hxx  dcmi_reg.hxx  dma.hxx  dma_reg.hxx  fsmc_reg.hxx  gpio.hxx  gpio_reg.hxx  nvic.hxx  pwr.hxx  sai.hxx  sai_reg.hxx  spi.hxx  spi_reg.hxx  tim.hxx  usart.hxx  usb_otg_fs.hxx  usb_otg_hs.hxx
tool/code_generator/result/STM32F446x/: adc.hxx  can.hxx  dbg.hxx  dma.hxx  exti.hxx  fsmc.hxx  gpio.hxx  i2c.hxx  nvic.hxx  quadspi.hxx  rcc.hxx  rtc.hxx  sai.hxx  sdio.hxx  spdif_rx.hxx  wwdg.hxx
tool/code_generator/result/STM32L4x2/: adc.hxx  aes.hxx  can.hxx  comp.hxx  crc.hxx  crs.hxx  dac.hxx  dbgmcu.hxx  dfsdm.hxx  dma.hxx  exti.hxx  firewall.hxx  flash.hxx  fpu.hxx  gpio.hxx  i2c.hxx  iwdg.hxx  lcd.hxx  lptim.hxx  mpu.hxx  nvic.hxx  opamp.hxx  pwr.hxx  rcc.hxx  rng.hxx  rtc.hxx  sai.hxx  scb.hxx  sdio.hxx  stk.hxx  swpmi.hxx  syscfg.hxx  tim.hxx  tsc.hxx  usart.hxx  usb.hxx  vref.hxx
